Vertically aligned feature content using flexbox, fixed quantity styles for basket summary

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -66,7 +66,16 @@ body {
 	=============================== */
 
 header.bk-header, footer.bk-footer {
-    padding:120px 0px;
+    min-height: 300px;
+    padding: 4em 0;
+    display: -webkit-flexbox;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-flex-align: center;
+	-ms-flex-align: center;
+	-webkit-align-items: center;
+	align-items: center;
 }
 
 .widget {
@@ -102,32 +111,10 @@ header.bk-header, footer.bk-footer {
 	}
 }
 
-#textwidgetbox1 {
-	float:right;
-		display: -webkit-flexbox;
-display: -ms-flexbox;
-display: -webkit-flex;
-display: flex;
--webkit-flex-align: center;
--ms-flex-align: center;
--webkit-align-items: center;
-align-items: center;
-}
-
 .textwidget {
 	display: inline-block;
 	width: 60%;
-	float: right;
-	margin-top:15px;
-}
-
-#textwidgetbox1 .bk-content-text p {
-	font-family:@font-swatch4-font-family; 
-	font-weight: @font-swatch4-font-weight; 
-	color:@font-swatch4-color; 
-	line-height:@font-swatch4-line-height; 
-	letter-spacing: @font-swatch4-letter-spacing; 
-	font-size: @font-swatch4-font-size;
+	text-align: right;
 }
 
 .headerwrapper {
@@ -955,6 +942,9 @@ select::-ms-expand {
       .basket-summary-pricepu {
         display: block;
       }
+      .basket-summary-quantity {
+      	margin-top: 4px;
+      }
       .basket-summary-quantity, .basket-summary-quantitybtn {
         display: inline-block;
         label {
@@ -964,27 +954,18 @@ select::-ms-expand {
         background-color: darken(@color-swatch1,3%);
 		padding: 5px 25px 6px;
 		margin: 0;
-		        @media @tablet {
-        	padding: 4px 10px 5px;
-        	margin: -3px;
-      }
-        @media @mobile {
-        	padding: 4px 10px 4px;
-        	margin: -3px;
-      }
+		position: relative;
+		top: -2px;
         }
         button {
-            padding:8px 10px;
+        	width: 20px;
+			height: 26px;
+            padding: 0;
+            box-shadow: none;
       		border:0;
       		color:@color-swatch1;
       		background-color:@color-swatch3;
       		margin: 0;
-        @media @tablet {
-        	padding:7px 8px;
-      	}
-      	@media @mobile {
-        	padding:6px 9px;
-      	}
       &:hover {
         background-color:@color-swatch7;
       }
